<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <!-- App List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcyAppList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:focusable="true"
        android:paddingBottom="120dp"
        app:reverseLayout="true"
        app:stackFromEnd="true" />

    <!-- Bottom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/search_gradient_background"
        android:gravity="end"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/prgUploading"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="gone" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdgeLength="10dp"
                android:hardwareAccelerated="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp"
                card_view:cardElevation="10dp"
                card_view:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/edtSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/transparent"
                    android:hint="@string/search_apps"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="16dp" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <Button
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:text="@string/share_selected_apps"
            android:visibility="gone" />

    </LinearLayout>

    <!-- Loading -->
    <RelativeLayout
        android:id="@+id/rltLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black80"
        android:visibility="gone">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mtrLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fadingEdgeLength="10dp"
            android:hardwareAccelerated="true"
            android:visibility="visible"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="30dp"
            card_view:cardElevation="10dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <!-- No Result -->
    <RelativeLayout
        android:id="@+id/rltNoResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtNoResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_result" />
    </RelativeLayout>

</RelativeLayout>